kubernetes/apps/home/home-assistant/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: home-assistant-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: home-assistant
    egress:
      - toFQDNs:
          - matchName: api.github.com
          - matchName: files.pythonhosted.org
          - matchName: github.com
          - matchName: pypi.org
          - matchName: raw.githubusercontent.com
          - matchName: release-assets.githubusercontent.com
          - matchName: unifi.internal
          - matchName: www.tauron.pl
          # hass specific
          - matchName: alerts.home-assistant.io
          - matchName: brands.home-assistant.io
          - matchName: version.home-assistant.io
          - matchName: wheels.home-assistant.io
          - matchPattern: "*.hacs.xyz"
        toPorts:
          - ports:
              - port: "443"
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: mosquitto
        toPorts:
          - ports:
              - port: "1883"
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: frigate
        toPorts:
          - ports:
              - port: "5000"
              - port: "8554"
      - toEntities:
          - world
        toPorts:
          - ports:
              # SSDP
              - port: "1900"
                protocol: UDP
              # mDNS
              - port: "5353"
                protocol: UDP
